syntax = "proto3";
package dto;
option go_package ="proto";

service ProductService {
    rpc Fetch (FetchDataRequest) returns (FetchDataResponse) {}
    rpc List (ListProductsRequest) returns (ListProductsResponse) {}
    rpc Stream (StreamProductsRequest) returns (stream StreamProductsResponse) {}
}

message FetchDataRequest{
    string url = 1;
}

message FetchDataResponse{
    string error = 1;
}

message ListProductsRequest{
    uint64 offset = 1;
    uint64 limit = 2;
}

message ListProductsResponse {
    uint64 page = 1;
    uint64 pageSize = 2;
    uint64 total = 3;
    repeated Product list=4;
    string error=5;
}

message StreamProductsRequest{

}

message StreamProductsResponse{
    Product product = 1;
}

message Product {
    string name = 1;
    string price = 2;
    uint64 changePrice = 3;
    uint64 lastUpdate = 4;
}
